tests/ui/duplicate_lang_names.stderr
error: duplicate language: foo
 --> tests/ui/duplicate_lang_names.rs:4:9
  |
4 |     mod foo {}
  |         ^^^
