tests/ui/duplicate_lang_names.rs
#[nanopass::langs]
mod langs {
    mod foo {}
    mod foo {}
}

fn main() {}
